# aetheris-vision-website

./: .cursorrules  .env.example  .gitignore  ANALYTICS_SETUP.md  ATBD.md  BUSINESS_SYSTEM_DOCUMENTATION.md  IMAGE_SYSTEM.md  PRICING_GUIDE.md  WEBSITE_MANUAL.md  cleanup.sh  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
public/images/: README.md
scripts/: backup.sh  bw-envrc-av.sh  check-db.ts  diagnostics.sh  download-images.sh  migrate.ts  monitor-business-stack.sh  neon-ping.mjs  vercel-monitor.sh  vercel-resolve-scope.mjs
src/: middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/app/about/: page.tsx
src/app/admin/: layout.tsx
src/app/capabilities/: page.tsx
src/app/contact/: page.tsx
src/app/intake/: page.tsx
src/app/portfolio/: page.tsx
src/components/: ChatWidget.tsx  ContactForm.tsx  Footer.tsx  LocationAutocomplete.tsx  LocationMap.tsx  Navbar.tsx  PortfolioImage.tsx  ProjectIntakeForm.tsx  RotatingEarth.tsx  SatelliteDisplay.tsx
src/lib/: admin-auth.ts  auth.ts  chat-context.ts  constants.ts  docuseal.ts  images.ts  jsonld.ts  portfolio-data.ts  posts.ts  stripe.ts  unsplash.ts
src/types/: analytics.d.ts
tests/: setup.ts
tests/features/: analytics-dashboard.feature  chat.feature  contact-form.feature
tests/integration/: contact-api.test.ts
tests/regression/: data-integrity.test.ts
tests/unit/: ContactForm.test.tsx  analytics-dashboard.test.tsx
vercel_mcp/: git-vercel-mcp.py  pyproject.toml
(+56 files in other folders)
