[project]
name = "vercel-mcp-server"
version = "1.0.0"
description = "MCP server for Vercel deployment monitoring"
authors = [{name = "Marston Ward", email = "marston@aetherisvision.com"}]
requires-python = ">=3.13"

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []

[tool.uv]
package = false